--- a/client/src/index.html
+++ b/client/src/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/assets/amis-sdk/iconfont.css" />
     <!-- <link rel="stylesheet" href="/assets/highlight/styles/default.min.css"> -->
     <link rel="stylesheet" href="/assets/highlight/styles/dark.min.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_2910377_3pwhk0k6ztp.css">
     <!-- <link rel="stylesheet" href="/assets/highlight/vs.min.css"> -->
     <!-- <link rel="stylesheet" href="/assets/highlight/kimbie-dark.min.css"> -->
     <!-- <link rel="stylesheet" href="/assets/highlight/styles/github.min.css"> -->
